--- a/index.html
+++ b/index.html
@@ -7,13 +7,55 @@
 
 	<title>Social</title>
 
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 
 	<script data-main="js/main" src="js/vendor/require.js"></script>
 </head>
 <body>
-	<aside class="sidebar" >
-	</aside>
-	<div id="container"></div>
+	<nav class="navbar navbar-inverse navbar-fixed-top">
+	  <div class="container-fluid">
+	    <!-- Brand and toggle get grouped for better mobile display -->
+	    <div class="navbar-header">
+	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+	        <span class="sr-only">Toggle navigation</span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	      </button>
+	      <a class="navbar-brand" href="#">Social Network</a>
+	    </div>
+
+	    
+	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+	      <ul class="nav navbar-nav">
+	        <li>
+	        	<a href="#/users">Users </a>
+	        </li>
+	        
+	        <li>
+	        	<a href="#/me">Me </a>
+	        </li>
+	      </ul>
+	    </div><!-- /.navbar-collapse -->
+	  </div><!-- /.container-fluid -->
+	</nav>
+
+	<div class="container" id="container">
+		<div class="col-xs-4" id="sidebar"><!-- 
+			<div class="list-group">
+			  <a href="#" class="list-group-item active">
+			    Cras justo odio
+			  </a>
+			  <a href="#" class="list-group-item">Dapibus ac facilisis in</a>
+			  <a href="#" class="list-group-item">Morbi leo risus</a>
+			  <a href="#" class="list-group-item">Porta ac consectetur ac</a>
+			  <a href="#" class="list-group-item">Vestibulum at eros</a>
+			</div> -->
+		</div>
+		<div class="col-xs-8" id="content">
+		</div>
+	</div>
+
 </body>
 </html>
